<resources>
    <!-- App Name -->
    <string name="app_name" translatable="false">Dicoding Stories</string>

    <!-- Key -->
    <string name="key_story" translatable="false">story</string>

    <!-- Title -->
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_logout">Logout</string>
    <string name="title_add_story">Add Story</string>
    <string name="title_select_image">Select Image</string>
    <string name="title_camera">Camera</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_storage">Storage</string>
    <string name="title_intent_chooser_image">Choose Image</string>
    <string name="title_story_detail">Story Detail</string>
    <string name="title_location">Location</string>

    <!-- Hint -->
    <string name="hint_user_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_story_image">Upload your image here!</string>
    <string name="hint_story_description">Description</string>

    <!-- Message -->
    <string name="success_login_user">Successfully logged on as %s</string>
    <string name="success_register_user">Successfully registered as %s</string>
    <string name="success_add_story">Your new story has been successfully added!</string>

    <string name="error_min_password_length">Password must be at least %d characters long</string>
    <string name="error_invalid_email">Please provide a valid email address</string>
    <string name="error_default">An error occurred</string>
    <string name="error_add_story">Failed to upload your story, please try again</string>
    <string name="error_permission_denied">%s permission has been denied, please enable in the Settings</string>
    <string name="error_story_image">Upload your image first!</string>
    <string name="error_story_description">Description must not be empty</string>
    <string name="error_story_location">Please select location on the map</string>
    <string name="error_stories_empty">The story list is currently empty</string>

    <string name="dialog_title_logout">Logout Confirmation</string>
    <string name="dialog_message_logout">Are you sure to logout from this account?</string>

    <!-- Button -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_add_story">Add Story</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_default_negative">No</string>
    <string name="btn_default_positive">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_retry">Retry</string>

    <!-- Questions -->
    <string name="question_register">Don\'t have an account?</string>
    <string name="question_login">Already have an account?</string>

    <!-- Content Description -->
    <string name="desc_story_images">Story Images</string>
    <string name="desc_btn_logout">Logout Button</string>
    <string name="desc_btn_back">Back Button</string>
    <string name="desc_btn_add">Button Add</string>
    <string name="desc_btn_story_maps">Button Stories Maps</string>

    <!-- Text -->
    <string name="text_posted_on">Posted on</string>
    <string name="text_posted_by">by</string>
    <string name="text_relative_date_now">Just now</string>
    <string name="text_relative_date_minutes">minutes ago</string>
    <string name="text_relative_date_hours">hours ago</string>
    <string name="text_relative_date_days">days ago</string>
    <string name="text_relative_date_weeks">weeks ago</string>
    <string name="text_relative_date_months">months ago</string>
    <string name="text_relative_date_years">years ago</string>
    <string name="text_posted_by_user_location">Posted by %s</string>
    <string name="text_add_location">Add location</string>

</resources>