<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.story.add.AddStoryFragment">

    <!-- Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:titleTextColor="@color/white">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/desc_btn_back"
                android:src="@drawable/ic_round_back"
                app:tint="@color/white"
                tools:ignore="RedundantDescriptionCheck" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_add_story"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/button_add"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_normal"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/desc_btn_add"
                android:src="@drawable/ic_round_check"
                app:tint="@color/white"
                tools:ignore="RedundantDescriptionCheck" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <!-- Image Upload -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image_upload_container"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:alpha="0"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="4dp"
                app:strokeColor="@color/black"
                app:strokeWidth="0.75dp"
                tools:alpha="1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_story_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/upload_hint_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_cloud_upload"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/secondary"
                            tools:ignore="ContentDescription,ImageContrastCheck" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_story_image"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Description -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:alpha="0"
                app:hintEnabled="true"
                tools:alpha="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_story_description"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="5" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>